Pledge List: Fix margin overflow when only 1 contributor on a pledge
Fixes #95

--- a/themes/wporg-5ftf/css/components/_pledge-contributors.scss
+++ b/themes/wporg-5ftf/css/components/_pledge-contributors.scss
@@ -46,6 +46,7 @@
 
 		li:first-child:last-child {
 			width: 100%;
+			margin-right: 0;
 			
 			a {
 				max-width: 280px;
